fix: Modify PostResponse to get user

--- a/src/main/resources/templates/post-list.html
+++ b/src/main/resources/templates/post-list.html
@@ -180,7 +180,7 @@
 
             postElement.innerHTML = `
               <div class="post-header">
-                <img src="${ (post.user && post.user.profileImageUrl) ? post.user.profileImageUrl : 'default_profile.jpg' }" alt="프로필 이미지">
+                <img src="${ (post.user && post.user.profileImageUrl) ? post.user.profileImageUrl : 'default-profile.jpg' }" alt="프로필 이미지">
                 <span>${ (post.user && post.user.username) ? post.user.username : '작성자: ' + post.uid }</span>
               </div>
               <p class="post-meta">
