fix: Modify location url to post-list page

--- a/src/main/resources/templates/post-edit.html
+++ b/src/main/resources/templates/post-edit.html
@@ -266,7 +266,7 @@
       });
 
       document.getElementById("cancelButton").addEventListener("click", function () {
-        window.location.href = "/api/posts";
+        window.location.href = "/post-list";
       });
 
       // 게시물 수정 요청
